<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BloodDonationApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="request">Request</string>
    <string name="donate">Donate</string>
    <string name="title_activity_request">RequestActivity</string>
    <string name="title_activity_subscribe">SubscribeActivity</string>
    <string name="bloodtype">Blood Type: </string>
    <string name="units">Blood Units: </string>
    <string name="PatientName">PatientName: </string>
    <string name="Hospital">Hospital: </string>
    <string name="ContactPerson">Contact Person: </string>
    <string name="ContactNo">Contact No: </string>
    <string name="Date">Date: </string>
    <string name="City">City: </string>
    <string name="Sorry">Sorry!! </string>
    <string name="SorryMessage">Oops, We could not locate any records for this request.</string>

    <string-array name="bloodtype">
        <item>O+ve</item>
        <item>O-ve</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string name="title_activity_donor_item">DonorItemActivity</string>
    <string name="register">Register to save life</string>

    <!-- Requstor Details -->
    <string name="p_requestor_details">Requestor Details</string>
    <string name="p_name">Patient Name</string>
    <string name="p_req_bloodgroup">Required Blood Group</string>
    <string name="p_no_units">No. of Units</string>
    <string name="p_hospital">Hospital</string>
    <string name="p_locality">Locality</string>
    <string name="p_city">City</string>
    <string name="p_bengaluru">Bangalore</string>
    <string name="p_contact_person">Contact Person</string>
    <string name="p_contact_no">Contact No.</string>
    <string name="p_date_required">Date when Required</string>

    <!-- Subscriber Details -->
    <string name="d_donor_details">Donor Details</string>
    <string name="d_subscribe_title">Register to Save Life</string>
    <string name="d_name">Donor Name</string>
    <string name="d_mobile_no">Mobile No.</string>
    <string name="d_gender">Gender</string>
    <string name="d_age">Age</string>
    <string name="d_bloodgroup">Blood Group</string>
    <string name="d_locality">Locality</string>
    <string name="d_city">City</string>
    <string name="d_last_don_date">Last Donated Date</string>
    <string name="d_height">Height (cm)</string>
    <string name="d_weight">Weight (kg)</string>
    <string name="title_activity_donor_details">DonorDetailsActivity</string>
    <string name="title_activity_request_details">RequestDetailsActivity</string>
    <string name="d_register">Register</string>
    <string name="title_activity_donor_list">DonorListActivity</string>
    <string name="d_update">Update</string>
    <string name="RegAccept">Request accepted.</string>
    <string name="subSuccess">Donor subscription successful.</string>
    <string name="subFailed">Donor subscription failed.</string>
    <string name="regFailed">Request not accepted.</string>
    <string name="title_activity_request_list">RequestListActivity</string>
    <string name="title_activity_request_item">RequestItemActivity</string>
    <string name="mylist">My Request</string>
    <string name="smsContact">SMS ur Contacts</string>
    <string name="shareReq">Share Request</string>
    <string name="listDonors">List of Donors</string>

</resources>
