<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/homescreen"
    android:orientation="vertical"
    android:padding="30dp" >

    <Button
        android:id="@+id/request"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:onClick="openRequestActivity"
        android:text="@string/request" />

    <Button
        android:id="@+id/donate"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:onClick="openDonateActivity"
        android:text="@string/donate" />

    <Button
        android:id="@+id/myRequests"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:onClick="openMyListActivity"
        android:text="@string/mylist" />

</LinearLayout>