<TableLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/otherpages"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SubscribeActivity" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00" >

        <TextView
            android:id="@+id/textView10"
            style="@style/WhiteBoldFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="7dp"
            android:paddingLeft="7dp"
            android:paddingTop="7dp"
            android:text="@string/d_subscribe_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="24sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="0.00" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingBottom="7dp"
            android:paddingLeft="7dp"
            android:paddingTop="7dp"
            android:text="@string/d_name"
            style="@style/WhiteFont" />

        <EditText
            android:id="@+id/editText1"
            style="@style/WhiteFont"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingBottom="7dp"
            android:paddingLeft="7dp"
            android:paddingTop="7dp"
            android:ems="10"
            android:inputType="textPersonName" >
            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingBottom="7dp"
            android:paddingLeft="7dp"
            android:paddingTop="7dp"
            android:text="@string/d_mobile_no"
            style="@style/WhiteFont" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_weight="1"
            android:gravity="left"
            android:paddingBottom="7dp"
            android:paddingLeft="7dp"
            android:paddingTop="7dp"
            android:ems="10"
            android:inputType="phone" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00" >

        <TextView
            android:id="@+id/textView3"
            style="@style/WhiteFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_weight="1"
            android:gravity="left"
            android:paddingBottom="7dp"
            android:paddingLeft="7dp"
            android:paddingTop="7dp"
            android:text="@string/d_gender" />
        
		<Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingBottom="7dp"
            android:paddingLeft="7dp"
            android:paddingTop="7dp"
            android:text="@string/d_age"
            style="@style/WhiteFont" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_weight="1"
            android:gravity="left"
            android:paddingBottom="7dp"
            android:paddingLeft="7dp"
            android:paddingTop="7dp"
            android:text="@string/d_bloodgroup"
            style="@style/WhiteFont" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingBottom="7dp"
            android:paddingLeft="7dp"
            android:paddingTop="7dp"
            android:text="@string/d_locality"
            style="@style/WhiteFont" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_last_don_date"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingBottom="7dp"
            android:paddingLeft="7dp"
            android:paddingTop="7dp"
            style="@style/WhiteFont" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00" >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingBottom="7dp"
            android:paddingLeft="7dp"
            android:paddingTop="7dp"
            android:text="@string/d_height"
            style="@style/WhiteFont" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.00" >

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingBottom="7dp"
            android:paddingLeft="7dp"
            android:paddingTop="7dp"
            android:text="@string/d_weight"
            style="@style/WhiteFont" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </TableRow>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/d_update" />


</TableLayout>